reformatting how gavin has it

--- a/metadata_validation.cfg
+++ b/metadata_validation.cfg
@@ -5,156 +5,155 @@
 #     - module: SampleService.core.validators.builtin
 #       callable-builder: units
 #       parameters:
-#         key: 'units'
-#         units: 'mg/L'
+#         key: units
+#         units: mg/L
+
+validators:
+  Elevation start:
+      - module: SampleService.core.validators.builtin
+        callable-builder: units
+        parameters:
+          key: units
+          units: meters
+      - module: SampleService.core.validators.builtin
+        callable-builder: number
+        parameters:
+          key: value
+          type: float
+          required: True
+
+  Latitude:
+      - module: SampleService.core.validators.builtin
+        callable-builder: units
+        parameters:
+          key: units
+          units: degrees
+      - module: SampleService.core.validators.builtin
+        callable-builder: number
+        parameters:
+          key: value
+          type: float
+          gte: -90.00
+          lte: 90.00
+
+  # do not have a date validator
+  # Collection date:
+  #     - module: SampleService.core.validators.builtin
+  #       callable-builder: units
+  #       parameters:
+  #         value: Collection date
+  #         units: Collection date precision
+  # do not have a date validator
+  # metadatakey:
+  #     - module: SampleService.core.validators.builtin
+  #       callable-builder: units
+  #       parameters:
+  #         value: Collection date (end)
+  #         units: Collection date precision
+
+  Longitude:
+      - module: SampleService.core.validators.builtin
+        callable-builder: units
+        parameters:
+          key: units
+          units: degrees
+      - module: SampleService.core.validators.builtin
+        callable-builder: number
+        parameters:
+          key: value
+          type: float
+          gte: -180.00
+          lte: 180.00
+
+  Age (min):
+      - module: SampleService.core.validators.builtin
+        callable-builder: units
+        parameters:
+          key: units
+          units: years
+      - module: SampleService.core.validators.builtin
+        callable-builder: number
+        parameters:
+          key: value
+          type: float
+          gte: 0
 
 
-Elevation start:
-    - module: SampleService.core.validators.builtin
-      callable-builder: units
-      parameters:
-        key: "units"
-        units: "meters"
-    - module: SampleService.core.validators.builtin
-      callable-builder: number
-      parameters:
-        key: "value"
-        type: float
-        required: True
+  Age (max):
+      - module: SampleService.core.validators.builtin
+        callable-builder: units
+        parameters:
+          key: units
+          units: year
+      - module: SampleService.core.validators.builtin
+        callable-builder: number
+        parameters:
+          key: value
+          type: float
+          gte: 0
 
-Latitude:
-    - module: SampleService.core.validators.builtin
-      callable-builder: units
-      parameters:
-        key: "units"
-        units: "degrees"
-    - module: SampleService.core.validators.builtin
-      callable-builder: number
-      parameters:
-        key: "value"
-        type: float
-        gte: -90.00
-        lte: 90.00
+  Geological Age:
+      - module: SampleService.core.validators.builtin
+        callable-builder: units
+        parameters:
+          key: units
+          units: year * 1000000  # millions of years
+      - module: SampleService.core.validators.builtin
+        callable-builder: number
+        parameters:
+          key: value
+          type: float
+          gte: 0
 
-# don't have a date validator
-# Collection date:
-#     - module: SampleService.core.validators.builtin
-#       callable-builder: units
-#       parameters:
-#         "value": "Collection date"
-#         "units": "Collection date precision"
-        
-# don't have a date validator
-# metadatakey:
-#     - module: SampleService.core.validators.builtin
-#       callable-builder: units
-#       parameters:
-#         "value": "Collection date (end)"
-#         "units": "Collection date precision"
+  Elevation end:
+      - module: SampleService.core.validators.builtin
+        callable-builder: units
+        parameters:
+          key: units
+          units: meters
+      - module: SampleService.core.validators.builtin
+        callable-builder: number
+        parameters:
+          key: value
+          type: float
+          required: True
 
-Longitude:
-    - module: SampleService.core.validators.builtin
-      callable-builder: units
-      parameters:
-        key: "units"
-        units: "degrees"
-    - module: SampleService.core.validators.builtin
-      callable-builder: number
-      parameters:
-        key: "value"
-        type: float
-        gte: -180.00
-        lte: 180.00
+  Depth in Core (max):
+      - module: SampleService.core.validators.builtin
+        callable-builder: units
+        parameters:
+          key: units
+          units: meters
+      - module: SampleService.core.validators.builtin
+        callable-builder: number
+        parameters:
+          key: value
+          type: float
+          required: True
 
-Age (min):
-    - module: SampleService.core.validators.builtin
-      callable-builder: units
-      parameters:
-        key: "units"
-        units: "years"
-    - module: SampleService.core.validators.builtin
-      callable-builder: number
-      parameters:
-        key: "value"
-        type: float
-        gte: 0
+  Depth in Core (min):
+      - module: SampleService.core.validators.builtin
+        callable-builder: units
+        parameters:
+          key: units
+          units: meters
+      - module: SampleService.core.validators.builtin
+        callable-builder: number
+        parameters:
+          key: value
+          type: float
+          required: True
 
 
-Age (max):
-    - module: SampleService.core.validators.builtin
-      callable-builder: units
-      parameters:
-        key: "units"
-        units: "year"
-    - module: SampleService.core.validators.builtin
-      callable-builder: number
-      parameters:
-        key: "value"
-        type: float
-        gte: 0
-
-Geological Age:
-    - module: SampleService.core.validators.builtin
-      callable-builder: units
-      parameters:
-        key: "units"
-        units: "year * 1000000"  # millions of years
-    - module: SampleService.core.validators.builtin
-      callable-builder: number
-      parameters:
-        key: "value"
-        type: float
-        gte: 0
-
-Elevation end:
-    - module: SampleService.core.validators.builtin
-      callable-builder: units
-      parameters:
-        key: "units"
-        units: "meters"
-    - module: SampleService.core.validators.builtin
-      callable-builder: number
-      parameters:
-        key: "value"
-        type: float
-        required: True
-
-Depth in Core (max):
-    - module: SampleService.core.validators.builtin
-      callable-builder: units
-      parameters:
-        key: "units"
-        units: "meters"
-    - module: SampleService.core.validators.builtin
-      callable-builder: number
-      parameters:
-        key: "value"
-        type: float
-        required: True
-
-Depth in Core (min):
-    - module: SampleService.core.validators.builtin
-      callable-builder: units
-      parameters:
-        key: "units"
-        units: "meters"
-    - module: SampleService.core.validators.builtin
-      callable-builder: number
-      parameters:
-        key: "value"
-        type: float
-        required: True
-
-
-Size:
-    - module: SampleService.core.validators.builtin
-      callable-builder: units
-      parameters:
-        key: "units"
-        units: "m^3"  # not sure this is correct
-    - module: SampleService.core.validators.builtin
-      callable-builder: number
-      parameters:
-        key: "value"
-        type: float
-        required: True
+  Size:
+      - module: SampleService.core.validators.builtin
+        callable-builder: units
+        parameters:
+          key: units
+          units: m^3  # not sure this is correct
+      - module: SampleService.core.validators.builtin
+        callable-builder: number
+        parameters:
+          key: value
+          type: float
+          required: True
