adding new configuration for sample_uploader

--- a/metadata_validation.cfg
+++ b/metadata_validation.cfg
@@ -8,6 +8,47 @@
 #         units: mg/L
 
 validators:
+
+  name
+    - module: SampleService.core.validator.builtin
+      callable-builder: noop
+
+  well
+    - module: SampleService.core.validator.builtin
+      callable-builder: noop
+
+  depth
+    - module: SampleService.core.validator.builtin
+      callable-builder: noop
+
+  elevation
+    - module: SampleService.core.validator.builtin
+      callable-builder: noop
+
+  Date
+    - module: SampleService.core.validator.builtin
+      callable-builder: noop
+
+  Time
+    - module: SampleService.core.validator.builtin
+      callable-builder: noop
+
+  Timezone
+    - module: SampleService.core.validator.builtin
+      callable-builder: noop
+
+  Material
+    - module: SampleService.core.validator.builtin
+      callable-builder: noop
+
+  Env_package
+    - module: SampleService.core.validator.builtin
+      callable-builder: noop
+
+  Description
+    - module: SampleService.core.validator.builtin
+      callable-builder: noop
+
   Elevation start:
     - module: SampleService.core.validators.builtin
       callable-builder: units
