adding new fields to validator

--- a/metadata_validation.cfg
+++ b/metadata_validation.cfg
@@ -10,12 +10,31 @@ validators:#
 
 validators:
 
+  id
+    validators:
+      - module: SampleService.core.validator.builtin
+        callable-builder: string
+        parameters:
+          max-len: 120
+    key_metadata:
+      description
+
   name
     validators:
       - module: SampleService.core.validator.builtin
-        callable-builder: noop
+        callable-builder: string
+        parameters:
+          max-len: 120
     key_metadata:
       description: name validator
+
+  parent_id
+    validators:
+      - module: SampleService.core.validator.builtin
+        callable-builder: string
+        parameters:
+          max-len: 120
+    key_metadata:
 
   well
     validators:
