updating date_columns fields for SESAR

--- a/metadata_validation.yml
+++ b/metadata_validation.yml
@@ -931,7 +931,7 @@ validators:
     - module: SampleService.core.validator.builtin
       callable-builder: noop
 
-  Release Date:
+  Release date:
     validators:
     - module: SampleService.core.validator.builtin
       callable-builder: noop
